--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <button id="submit-btn" onclick="checkAnswer()">Submit</button>
     <button id="next-btn" onclick="nextQuestion()" disabled>Next Question</button>
     <p id="result"></p>
+    <p id="question-number"></p> <!-- Add question number box -->
 </div>
 
 <script src="script.js"></script>
