--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Quiz Game</title>
+    <title>Teen Titans Go</title>
 </head>
-<body>
-
-<div id="quiz-container">
-    <h1 id="question">Loading Question...</h1>
-    <div id="options-container" class="options"></div>
-    <button id="submit-btn" onclick="checkAnswer()">Submit</button>
-    <button id="next-btn" onclick="nextQuestion()" disabled>Next Question</button>
-    <p id="result"></p>
-    <p id="question-number"></p> <!-- Add question number box -->
-</div>
-
-<script src="script.js"></script>
+<body class="home_body">
+    <header>
+        <img src="./wp2612498-teen-titans-go-wallpaper.jpg" alt="image titan" width="600" height="200">
+        <h1>Welcome to Teen Titans Go Quiz</h1>
+    </header>
+    <main>
+        <p>Get ready for an exciting quiz adventure with Teen Titans Go!</p>
+        <p>Test your knowledge and have fun with your team!</p>
+        
+        <a href="index.html" class="quiz-button">Start Quiz</a>
+    </main>
+    
+    </div>
 </body>
 </html>
