home page created with flex

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Get ready for an exciting quiz adventure with Teen Titans Go!</p>
         <p>Test your knowledge and have fun with your team!</p>
         
-        <a href="index.html" class="quiz-button">Start Quiz</a>
+        <a href="quiz.html" class="quiz-button">Start Quiz</a>
     </main>
     
     </div>
