--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="home_body">
     <header>
-        <img src="./wp2612498-teen-titans-go-wallpaper.jpg" alt="image titan" width="600" height="200">
+        <img src="./teen_titan.jpg" alt="image titan" width="600" height="200">
         <h1>Welcome to Teen Titans Go Quiz</h1>
     </header>
     <main>
