--- a/quiz.html
+++ b/quiz.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Quiz Game</title>
 </head>
-<body>
+<body class="quiz_body">
 
 <div id="quiz-container">
     <h1 id="question">Loading Question...</h1>
