--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Teen Titans Go</title>
 </head>
 <body class="home_body">
-    <header>
-        <img src="./teen_titan.jpg" alt="image titan" width="600" height="200">
+    <header class="home_header">
+        <img class="home_img" src="./teen_titan.jpg" alt="image titan" width="600" height="200">
         <h1>Welcome to Teen Titans Go Quiz</h1>
     </header>
     <main>
