--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="home_body">
     <header class="home_header">
-        <img class="home_img" src="./teen_titan.jpg" alt="image titan" width="600" height="200">
+        <img class="home_img" src="./teen_titan.jpg" alt="image titan">
         <h1>Welcome to Teen Titans Go Quiz</h1>
     </header>
     <main>
