--- a/quiz.html
+++ b/quiz.html
@@ -7,7 +7,9 @@
     <title>Quiz Game</title>
 </head>
 <body class="quiz_body">
-
+<div class="container">
+    <h1>Enjoy the Game...!!!</h1>
+</div>
 <div id="quiz-container">
     <h1 id="question">Loading Question...</h1>
     <div id="options-container" class="options"></div>
