--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Protest+Revolution&family=Protest+Riot&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Teen Titans Go</title>
 </head>
+
 <body class="home_body">
     <header class="home_header">
         <img class="home_img" src="./teen_titan.jpg" alt="image titan">
@@ -14,10 +21,11 @@
     <main>
         <p>Get ready for an exciting quiz adventure with Teen Titans Go!</p>
         <p>Test your knowledge and have fun with your team!</p>
-        
+
         <a href="quiz.html" class="quiz-button">Start Quiz</a>
     </main>
-    
+
     </div>
 </body>
+
 </html>
