--- a/quiz.html
+++ b/quiz.html
@@ -1,24 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Protest+Revolution&family=Protest+Riot&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Quiz Game</title>
 </head>
-<body class="quiz_body">
-<div class="container">
-    <h1>Enjoy the Game...!!!</h1>
-</div>
-<div id="quiz-container">
-    <h1 id="question">Loading Question...</h1>
-    <div id="options-container" class="options"></div>
-    <button id="submit-btn" onclick="checkAnswer()">Submit</button>
-    <button id="next-btn" onclick="nextQuestion()" disabled>Next Question</button>
-    <p id="result"></p>
-    <p id="question-number"></p> <!-- Add question number box -->
-</div>
 
-<script src="script.js"></script>
+<body class="quiz_body">
+    <div class="container">
+        <h1>Enjoy the Game...!!!</h1>
+    </div>
+    <div id="quiz-container">
+        <h1 id="question">Loading Question...</h1>
+        <div id="options-container" class="options"></div>
+        <button id="submit-btn" onclick="checkAnswer()">Submit</button>
+        <button id="next-btn" onclick="nextQuestion()" disabled>Next Question</button>
+        <p id="result"></p>
+        <p id="question-number"></p> <!-- Add question number box -->
+    </div>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
