--- a/index.html
+++ b/index.html
@@ -25,8 +25,12 @@
 
         <a href="quiz.html" class="quiz-button">Start Quiz</a>
     </main>
+    
 
-    </div>
+    
+    <footer class="home_footer">
+        <p>Made with love - Teen Titans Go team</p>
+    </footer>
 </body>
 
 </html>
