--- a/quiz.html
+++ b/quiz.html
@@ -26,6 +26,9 @@
         <p id="result"></p>
         <p id="question-number"></p> <!-- Add question number box -->
     </div>
+    <footer>
+        <p>Made with love - Teen Titans Go team</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
